fix #9 (words are hard)

--- a/public/index.html
+++ b/public/index.html
@@ -782,7 +782,7 @@ It depends on what Linux distribution you have and how it have it configured. If
 
 <p>You can pick one of these up on Ebay for less than $400. They are <a href="https://www.reddit.com/r/thinkpad/wiki/intro">robust, easy to use, and will last a while</a>. These should work well for QubesOS. I use QubesOS on a X220, and I love it. Watch Micah Lee&rsquo;s talk on <a href="https://www.youtube.com/watch?v=f4U8YbXKwog">why qubesOS is awesome.</a></p>
 
-<h3 id="if-you-really-need-run-linux-fedora-is-the-least-bad-security-wise">If you really need run Linux, Fedora is the least bad security-wise</h3>
+<h3 id="if-you-really-need-to-run-linux-fedora-is-the-least-bad-security-wise">If you really need to run Linux, Fedora is the least bad security-wise</h3>
 
 <p>Thinkpad X220 or X230 should run what you need for Fedora.</p>
 
